<resources>
    <string name="app_name">SunDay</string>
    <string name="isLoading">正在加载</string>
    <string name="failure">加载失败</string>
    <string name="loadingFinish">加载完毕</string>
    <string name="yubao">预报</string>
    <string name="sport">运动指数</string>
    <string name="comf">舒适指数</string>
    <string name="carWash">洗车指数</string>
    <string name="dress">穿衣指数</string>
    <string name="flu">感冒指数</string>
    <string name="trav">旅游指数</string>
    <string name="uv">紫外线指数</string>
    <string name="air">污染指数</string>
    <string name="houly_forecast">小时预报</string>
    <string name="update_weather_failure">更新天气信息失败</string>

    <string name="weather_failure">天气信息错误</string>
    <string name="update_success">更新成功</string>
    <string name="tmp">%s℃</string>
    <string name="min_max_tmp">%1$s℃ ~ %2$s℃</string>
    <string name="choose_city">添加城市</string>
    <string name="manage_city">城市管理</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="data_from">天气数据来自和风天气</string>
    <string name="email">p627121110@163.com</string>
</resources>
