<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="com.example.gzp.sunday.data.weather.Suggestion"/>
        <variable
            name="suggestion"
            type="Suggestion"/>
    </data>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:drawableTop="@drawable/sport_icon"
            android:text="@string/sport"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/g25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"/>

        <TextView
            android:id="@+id/sport_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:text="@{suggestion.sport.status}"
            tools:text="较舒适"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:drawableTop="@drawable/uv_icon"
            android:text="@string/uv"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/g75"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:drawableTop="@drawable/flu_icon"
            android:text="@string/flu"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/g50"
            app:layout_constraintStart_toStartOf="@+id/g25"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/texw6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:drawableTop="@drawable/tray_icon"
            android:text="@string/trav"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/g75"
            app:layout_constraintStart_toStartOf="@+id/g50"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.constraint.Guideline
            android:id="@+id/g25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25"/>

        <android.support.constraint.Guideline
            android:id="@+id/g75"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75"/>

        <android.support.constraint.Guideline
            android:id="@+id/g50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:drawableTop="@drawable/comf_icon"
            android:text="@string/comf"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/sport_info"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:drawableTop="@drawable/dress_icon"
            android:text="@string/dress"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/g50"
            app:layout_constraintStart_toStartOf="@+id/g25"
            app:layout_constraintTop_toTopOf="@+id/textView8"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:drawableTop="@drawable/wash_icon"
            android:text="@string/carWash"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/g75"
            app:layout_constraintStart_toStartOf="@+id/g50"
            app:layout_constraintTop_toTopOf="@+id/textView9"/>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:drawableTop="@drawable/air_icon"
            android:text="@string/air"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.384"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/g75"
            app:layout_constraintTop_toTopOf="@+id/textView10"/>

        <TextView
            android:id="@+id/flu_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/sport_info"
            android:text="@{suggestion.flu.status}"
            tools:text="较舒适"/>

        <TextView
            android:id="@+id/tray_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/texw6"
            app:layout_constraintStart_toStartOf="@+id/texw6"
            app:layout_constraintTop_toTopOf="@+id/flu_info"
            android:text="@{suggestion.trav.status}"
            tools:text="较舒适"/>

        <TextView
            android:id="@+id/uv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/tray_info"
            android:text="@{suggestion.uv.status}"
            tools:text="较舒适"/>

        <TextView
            android:id="@+id/comf_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            android:text="@{suggestion.comf.status}"
            tools:text="较舒适"/>

        <TextView
            android:id="@+id/dress_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/comf_info"
            android:text="@{suggestion.dress.status}"
            tools:text="较舒适"/>

        <TextView
            android:id="@+id/car_wash_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/dress_info"
            android:text="@{suggestion.carWash.status}"
            tools:text="较舒适"/>

        <TextView
            android:id="@+id/air_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="@+id/car_wash_info"
            android:text="@{suggestion.air.status}"
            tools:text="较舒适"/>


    </android.support.constraint.ConstraintLayout>
</layout>

